--- a/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
+++ b/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
@@ -145,13 +145,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="NLexicalAnalyzer.h" />
+    <ClInclude Include="NParser.h" />
+    <ClInclude Include="NScanner.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NINO_CALCULATOR.cpp" />
-    <ClCompile Include="NLexicalAnalyzer.cpp" />
+    <ClCompile Include="NParser.cpp" />
+    <ClCompile Include="NScanner.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
