--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
@@ -166,7 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="NTestScanner.cpp" />
-    <ClCompile Include="NTestNParser.cpp" />
+    <ClCompile Include="NTestParser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
