--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="NTestScanner.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="NTestNParser.cpp">
+    <ClCompile Include="NTestParser.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
