--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="NTestExpression.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="NTestChecker.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
