--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/NINO_CALCULATOR.VC.VC.opendb
+/NINO_CALCULATOR.VC.db
