--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
@@ -169,6 +169,8 @@
     </ClCompile>
     <ClCompile Include="NTestScanner.cpp" />
     <ClCompile Include="NTestParser.cpp" />
+    <ClCompile Include="TestDictionary.cpp" />
+    <ClCompile Include="TestScanner.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
