--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="NewTest">
+      <UniqueIdentifier>{13002731-686c-4780-97c7-88fd665f7ae9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -37,6 +40,12 @@
     </ClCompile>
     <ClCompile Include="NTestChecker.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestDictionary.cpp">
+      <Filter>NewTest</Filter>
+    </ClCompile>
+    <ClCompile Include="TestScanner.cpp">
+      <Filter>NewTest</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
