--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="TestScanner.cpp">
       <Filter>NewTest</Filter>
     </ClCompile>
+    <ClCompile Include="TestParser.cpp">
+      <Filter>NewTest</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
