--- a/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
+++ b/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="NExpression.h" />
     <ClInclude Include="NParser.h" />
     <ClInclude Include="NScanner.h" />
+    <ClInclude Include="Parser.h" />
     <ClInclude Include="Scanner.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -162,6 +163,7 @@
     <ClCompile Include="NINO_CALCULATOR.cpp" />
     <ClCompile Include="NParser.cpp" />
     <ClCompile Include="NScanner.cpp" />
+    <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Scanner.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
