--- a/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj.filters
+++ b/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -83,5 +80,8 @@
     <ClCompile Include="Parser.cpp">
       <Filter>New</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
