--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="TestParser.cpp">
       <Filter>NewTest</Filter>
     </ClCompile>
+    <ClCompile Include="TestToken.cpp">
+      <Filter>NewTest</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
