--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="TestDictionary.cpp" />
     <ClCompile Include="TestParser.cpp" />
     <ClCompile Include="TestScanner.cpp" />
+    <ClCompile Include="TestToken.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
