--- a/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj.filters
+++ b/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Token.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Error.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Token.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Error.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
