--- a/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
+++ b/NINO_CALCULATOR/NINO_CALCULATOR.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Calculator.h" />
     <ClInclude Include="Dictionary.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="Expression.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Token.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="Dictionary.cpp" />
     <ClCompile Include="Error.cpp" />
     <ClCompile Include="Expression.cpp" />
