--- a/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
+++ b/NINO_TEST_CALCULATOR/NINO_TEST_CALCULATOR.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="TestToken.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TestCalculator.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
